force-app/main/default/objects/Account_Site_Page__c/Account_Site_Page__c.object-meta.xml
<CustomObject>
    <description>Holds the settings to a public-facing web page in the Digital Experience Site</description>
    <label>Account Site Page</label>
    <nameField>
        <displayFormat>SitePage-{00000}</displayFormat>
        <label>Account Site Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Site Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>