force-app/main/default/objects/Account_Site_Page__c/fields/Header_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_URL__c</fullName>
    <label>Header Image URL</label>
    <type>Url</type>
</CustomField>