force-app/main/default/objects/Account_Site_Page__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <formula>&quot;www.TODO.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Page URL</label>
    <type>Text</type>
</CustomField>